# whisper-rust-binding

./: .gitignore  BUILDING.md  BUILD_FIX.md  BUILD_INSTRUCTIONS.md  Cargo.toml  MOBILE_SETUP_SUMMARY.md  PRODUCTION_READY.md  README.md  SLIDING_WINDOW_STATUS.md  USAGE.md  android_config.sh  build.rs  build.rs.bak  build_all.sh  build_android.sh  build_linux.sh  build_mobile_android.sh  build_so.sh  cleanup_examples.sh  clone_whisper_cpp.sh  compile_test.sh  complete_fix.sh  copy_native_libs.sh  download_model.sh  fix_and_build.sh  fix_lib_rs.sh  fix_whisper_repo.sh  integration_example.dart  make_executable.sh  manual_fix_steps.md  mobile_integration_guide.md  one_click_fix.sh  pre_build_check.sh  rebuild.sh  rebuild_after_fix.sh  run_build_with_debug.sh  run_test.sh  run_test_local.sh  run_transcript.sh  setup_dual_android.sh  (+5 more)
.cargo/: config.toml
android/: README.md  build_all.sh
android/jni_example/com/example/whisper/: WhisperEngine.java  WhisperExample.java
docs/: android-integration.md  android-ndk-setup.md  api-reference.md  audio-processing.md  build-guide.md  dual-project-integration.md  examples_cleanup.md  flutter-integration-complete.md  flutter-integration-strategy.md  getting-started.md  language-support.md  performance-guide.md  troubleshooting.md
docs/flutter/: 01-setup.md  02-frb-integration.md  03-models.md  04-providers.md  05-services.md  06-ui-components.md  07-realtime-transcription.md  08-dual-library.md  09-permissions.md  10-examples.md  README.md
examples/: audio_utils.rs  dual_project_integration.rs  realtime_murajaah.rs  simple_integration_test.rs  simple_sliding_window.rs  simple_test.rs  sliding_window_transcribe.rs  test_direct_whisper.rs  test_transcription.rs  transcribe_file.rs
examples/01_basic/: test_transcription.rs
examples/02_production/: transcribe_file.rs
examples/03_flutter/: flutter_api_demo.rs
examples/04_advanced/: hybrid_sliding_window.rs  simple_sliding_window.rs
examples_backup/: flutter_api_mock.rs  flutter_realtime_demo.rs  hybrid_sliding_window.rs  murajaah_chunks.rs  production_test.rs  realtime_sliding_window.rs  sliding_window.rs  sliding_window_transcribe.rs  test_model_only.rs  transcribe_file.rs
src/: android.rs  binding.h  flutter_api.rs  flutter_transcriber.rs  lib.rs  lib.rs.bak  quran_integration.rs  realtime_transcriber.rs
src/mock/: mod.rs
