[package]
name = "whisper-rust-binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # Add rlib for examples and tests
name = "whisper_rust_binding"

[dependencies]
libc = "0.2.174"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
once_cell = "1.21.3"
thiserror = "1.0.69"
parking_lot = "0.12.3"

[build-dependencies]
cc = "1.2.31"
cmake = "0.1.54"

# Android specific configuration
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = { version = "0.21.1", optional = true }

# Dev dependencies for examples and testing
[dev-dependencies]
hound = "3.5.0"

# Feature flags
[features]
default = []
android-jni = ["jni"]

# Examples with organized paths
[[example]]
name = "simple_test"
path = "examples/01_basic/simple_test.rs"

[[example]]
name = "test_model_only"
path = "examples/01_basic/test_model_only.rs"

[[example]]
name = "test_transcription"
path = "examples/01_basic/test_transcription.rs"

[[example]]
name = "transcribe_file"
path = "examples/02_production/transcribe_file.rs"

[[example]]
name = "production_test"
path = "examples/02_production/production_test.rs"

[[example]]
name = "test_direct_whisper"
path = "examples/02_production/test_direct_whisper.rs"

[[example]]
name = "flutter_api_demo"
path = "examples/03_flutter/flutter_api_demo.rs"

[[example]]
name = "dual_project_integration"
path = "examples/03_flutter/dual_project_integration.rs"

[[example]]
name = "simple_sliding_window"
path = "examples/04_advanced/simple_sliding_window.rs"

[[example]]
name = "hybrid_sliding_window"
path = "examples/04_advanced/hybrid_sliding_window.rs"
